Background needed on IE9/10 for clicks, fix #1402

--- a/src/resources/forms/orbeon/builder/resources/form-builder.css
+++ b/src/resources/forms/orbeon/builder/resources/form-builder.css
@@ -91,17 +91,11 @@ body {
 }
 .orbeon {
   /* ***** Toolbox **************************************************************************************************** */
-
   /* ***** Dialogs **************************************************************************************************** */
-
   /* ***** In-Place Editing ******************************************************************************************* */
-
   /* ***** Grid ******************************************************************************************************* */
-
   /* ***** Message **************************************************************************************************** */
-
   /* ***** Layout ***************************************************************************************************** */
-
 }
 .orbeon .fb-main {
   position: absolute;
@@ -146,6 +140,8 @@ body {
   color: #BBB;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   z-index: 1;
+  background: white;
+  opacity: 0.01;
 }
 .orbeon .fb-edit-section-label {
   position: absolute;
